--- a/page_magasin/style.css
+++ b/page_magasin/style.css
@@ -47,12 +47,12 @@ ol{
     margin-left: 0px;
 }
 .para{
-    
+    display:block;
 }
 
 .para h1{
     margin-top: 15px;
-    font-size: 18px;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
@@ -84,4 +84,50 @@ section{
 .ver{
     color:#699D58;
 }
+@media (max-width:500px) {
+    header{
+        flex-direction: column;      
+    }
+   
+    .mune{ 
+        margin-top: 10px;
+        margin-left: 0px;
+    list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;     
+ }
 
+ .para{
+    display:block;
+    text-align: center;
+}
+.para h1{
+    margin:auto;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    
+}
+.para p{
+    margin: auto; 
+}
+section{
+  
+    display: block;
+}
+.article{  
+   
+   text-align: center;
+      
+}
+.imag1{   
+    height: 100%;
+    width: 100%;
+
+}  
+.para h1{
+    margin-top: 20px;
+    margin-bottom: 15px;
+    font-size: 18px;
+   
+}
+}
